Improved remote metadata file checking feedback